# kafka-device

./: ReadMe.md  bitbucket-pipelines.yml  default.nix  kafka-device.cabal  kafka-device.config  release.nix  shell.nix
src/: Main.hs  MainKeyboard.hs
src/Network/UI/: Kafka.hs
src/Network/UI/Kafka/: Interpretation.hs  Keyboard.hs  Types.hs
