name         : kafka-device
version      : 1.0.0.0
synopsis     : UI device events via a Kafka message broker
description  : This package contains functions for passing UI device events to topics on a Kafka message broker \<<https://kafka.apache.org/>\>.  Also see \<<https://hackage.haskell.org/package/kafka-device-joystick/>\>, \<<https://hackage.haskell.org/package/kafka-device-glut/>\>, \<<https://hackage.haskell.org/package/kafka-device-spacenav/>\>, \<<https://hackage.haskell.org/package/kafka-device-leap/>\>.
license      : MIT
license-file : LICENSE
author       : Brian W Bush <code@functionally.io>
maintainer   : Brian W Bush <code@functionally.io>
copyright    : (c) 2016-19 Brian W Bush
category     : Hardware
build-type   : Simple
cabal-version: >= 1.10
stability    : Production
homepage     : https://bitbucket.org/functionally/kafka-device
bug-reports  : https://bwbush.atlassian.net/projects/HKAFDEV/issues/
package-url  : https://bitbucket.org/functionally/kafka-device/downloads/kafka-device-$version.tar.gz

extra-source-files: ReadMe.md
                    default.nix

source-repository head
  type    : git
  location: https://bitbucket.org/functionally/kafka-device
 
library
  exposed-modules : Network.UI.Kafka
                    Network.UI.Kafka.Interpretation
                    Network.UI.Kafka.Keyboard
                    Network.UI.Kafka.Types
  build-depends   : base >= 4.10 && < 5
                  , aeson
                  , binary
                  , bytestring
                  , cereal
                  , linear
                  , milena
                  , mtl
  hs-source-dirs  : src
  ghc-options     : -Wall
  default-language: Haskell2010

executable kafka-device
  main-is         : Main.hs
  other-modules   : Network.UI.Kafka
                    Network.UI.Kafka.Types
  build-depends   : base
                  , aeson
                  , binary
                  , bytestring
                  , cereal
                  , linear
                  , milena
                  , mtl
  hs-source-dirs  : src
  ghc-options     : -Wall -threaded
  default-language: Haskell2010

executable kafka-device-keyboard
  main-is         : MainKeyboard.hs
  other-modules   : Network.UI.Kafka
                    Network.UI.Kafka.Keyboard
                    Network.UI.Kafka.Types
  build-depends   : base
                  , aeson
                  , binary
                  , bytestring
                  , cereal
                  , linear
                  , milena
                  , mtl
  hs-source-dirs  : src
  ghc-options     : -Wall -threaded
  default-language: Haskell2010
